--- a/client/src/index.css
+++ b/client/src/index.css
@@ -22,8 +22,8 @@ body {
 }
 
 /* Handle */
-::-webkit-scrollbar-thumb {
+/* ::-webkit-scrollbar-thumb {
   background: #888;
   border-radius: 6px;
   height: 50px;
-}
+} */
